--- a/config/model/default.yaml
+++ b/config/model/default.yaml
@@ -6,7 +6,7 @@ model:
         embedding_dim: 64
         vae_latent_dim: 32
         jitter: 0.5
-        bn_type: 'vae'
+        bn_type: 'none'
     decoder:
         in_channels: ${model.encoder.embedding_dim}
         conditioning_channels: 128
@@ -17,3 +17,8 @@ model:
         fc_channels: 256
         bits: ${preprocessing.bits}
         hop_length: ${preprocessing.hop_length}
+    mlp:
+        in_channels: 64
+        n_speakers: ${dataset.n_speakers}
+        speaker_embedding_dim: 64
+        embedding_dim: 64
